--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
             <p class="text-indigo-600 dark:text-indigo-500">Apakah kamu pernah membuat project? Inilah project terakhir saya yang sudah saya buat</p>
           </div>
         </div>
+
         <div class="w-full flex flex-wrap justify-center">
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
@@ -214,7 +215,7 @@
      </section>
 
      <!-- Keterampilan -->
-     <section id="project" class="pt-28 mt-56 pb-36 w-screen rounded-xl shadow-xl dark:bg-slate-800">
+     <section id="project" class="pt-28 mt-56 pb-36 w-screen rounded-xl shadow-xl bg-gradient-to-l from-indigo-100 to-white dark:bg-slate-800">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
@@ -281,6 +282,18 @@
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="text-4xl font-semibold mb-2 dark:text-white">Join Community Us!</h4>
             <p class="text-indigo-600 dark:text-indigo-500">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste necessitatibus debitis ut. A neque ad distinctio.</p>
+          </div>
+        </div>
+
+        <div class="w-full flex flex-wrap justify-center">
+          <div class="mb-12 p-4 md:w-3/4">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img src="img/telegram.png" alt="" class="w-full">
+            </div>
+            <h3 class="font-semibold text-2xl text-slate-900 dark:text-white mt-5 mb-3">
+              Join custom rom Android community here!
+            </h3>
+            <p class="font-medium text-base text-indigo-500">Membuat menggunakan Bahasa pemrogamman Java dan menggunakan framework Greenfoot. Tersedia di Playstore dan <a class="text-black font-semibold" href="https://github.com/rdityaa/ducks-vs-obstacles_Greenfoot-Game" target="_blank">GitHub source code</a></span><a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://play.google.com/store/apps/details?id=com.kxland.ductjoy&pcampaignid=web_share" target="_blank">Download di Playstore!</a>
           </div>
         </div>
      </section>
