--- a/index.html
+++ b/index.html
@@ -275,6 +275,18 @@
     </div>
      </section>
 
+     <!-- Buku -->
+     <section id="project" class="pt-36 mt-16 pb-16 w-screen bg-slate-100 dark:bg-slate-800 rounded-xl shadow-xl">
+      <div class="container">
+        <div class="w-full">
+          <div class="mx-auto mb-16 max-w-xl text-center">
+            <h4 class="text-4xl font-semibold mb-2 dark:text-white">Published Book</h4>
+            <p class="text-indigo-600 dark:text-indigo-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, veritatis.</p>
+          </div>
+        </div>
+      </div>
+     </section>
+
      <!-- Kegabutan -->
      <section id="project" class="pt-36 mt-16 pb-16 w-screen bg-slate-100 dark:bg-slate-800 rounded-xl shadow-xl">
       <div class="container">
