fix bug dark mode

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
      </section>
 
      <!-- Keterampilan -->
-     <section id="project" class="pt-28 mt-56 pb-36 w-screen rounded-xl shadow-xl bg-gradient-to-l from-indigo-100 to-white dark:bg-slate-800">
+     <section id="project" class="pt-28 mt-56 pb-36 w-screen rounded-xl shadow-xl dark:bg-slate-800">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
