add icon tittle

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <!-- Link CSS -->
    <link rel="stylesheet" href="style.css">
 
+  <!-- Link Icons -->
+  <link rel="Icon" href="img/R.png">
+
   <!-- Link Font Inter -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
