--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Google Search Console -->
-  <meta name="google-site-verification" content="h908g9Xlz7JZFzHk6Xp4oZUF-Iqhp5tPQXpsk2XEWtA" />
+  <meta name="google-site-verification" content="jFhHo6zdSTuzxPV4umSJXmfa5FPTV7qsm09epfhNZzQ" />
 
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -321,7 +321,7 @@
             <h3 class="font-semibold text-2xl text-slate-900 dark:text-white mt-5 mb-3">
               Join custom rom Android community here!
             </h3>
-            <p class="font-medium text-base text-indigo-500">Membuat menggunakan Bahasa pemrogamman Java dan menggunakan framework Greenfoot. Tersedia di Playstore dan <a class="text-black font-semibold" href="https://github.com/rdityaa/ducks-vs-obstacles_Greenfoot-Game" target="_blank">GitHub source code</a></span><a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://play.google.com/store/apps/details?id=com.kxland.ductjoy&pcampaignid=web_share" target="_blank">Download di Playstore!</a>
+            <p class="font-medium text-base text-indigo-500">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, sit. Facilis assumenda ut voluptates culpa fuga ex corporis iure voluptatem.</span><a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://t.me/dityadiscussion" target="_blank">Join Here</a>
           </div>
         </div>
      </section>
