--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="text-4xl font-semibold mb-2 dark:text-white">Join Community Us!</h4>
-            <p class="text-indigo-600 dark:text-indigo-500">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste necessitatibus debitis ut. A neque ad distinctio.</p>
+            <p class="text-indigo-600 dark:text-indigo-500">Gabung dengan Komunitas modding Android disini</p>
           </div>
         </div>
 
@@ -321,7 +321,7 @@
             <h3 class="font-semibold text-2xl text-slate-900 dark:text-white mt-5 mb-3">
               Join custom rom Android community here!
             </h3>
-            <p class="font-medium text-base text-indigo-500">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, sit. Facilis assumenda ut voluptates culpa fuga ex corporis iure voluptatem.</span><a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://t.me/dityadiscussion" target="_blank">Join Here</a>
+            <p class="font-medium text-base text-indigo-500">Komunitas Modding Android, Sharing seputar Tips and Trick modding Android, Yuk langsung kepoin aja grupnya dengan gabung di link dibawah ini</span><a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://t.me/dityadiscussion" target="_blank">Join Here</a>
           </div>
         </div>
      </section>
