--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="text-4xl font-semibold mb-2 dark:text-white">Published Book</h4>
-            <p class="text-indigo-600 dark:text-indigo-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, veritatis.</p>
+            <p class="text-indigo-600 dark:text-indigo-500">Buku panduan saya yang berhasil ter-publish</p>
           </div>
         </div>
       </div>
