refresh and update

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
     <div class="container">
       <div class="flex flex-wrap">
       <div class="w-full self-center px-4">
-          <h1 class="text-xl font-semibold text-indigo-500">Hai Dunia, Saya <span class="text-slate-900 block font-semibold text-5xl mt-1 dark:text-white">Raditya Rizki</span></h1>
-          <h2 class="font-medium text-slate-500 text-lg mb-5 dark:text-slate-500">Mahasiswa | It Implementor | Junior Web Programming</h2>
-          <p class="font-medium text-indigo-400 mb-10 leading-relaxed md:w-1/2">Seseorang yang memiliki minat berkembang di Dunia IT, mari kita bersama-sama belajar dan sharing biar dapet pengalaman baru!</p>
-          <a class="text-base font-semibold text-white bg-indigo-600 py-3 px-8 rounded-full hover:shadow-lg hover:bg-indigo-800 hover:opacity-80 transition duration-300 ease-in-out" href="https://drive.google.com/file/d/1nRiV1oQEp-QKF4ymBJFxlzevyDCtdr5y/view">Download CV!</a>
+          <h1 class="text-xl font-semibold text-indigo-500">Hello World, im <span class="text-slate-900 block font-semibold text-5xl mt-1 dark:text-white">Raditya Rizki Raharja</span></h1>
+          <h2 class="font-medium text-slate-500 text-lg mb-5 dark:text-slate-500">Mahasiswa | Networking | Programming</h2>
+          <p class="font-medium text-indigo-400 mb-10 leading-relaxed md:w-1/2">Seseorang yang memiliki minat berkembang di Dunia Teknologi Informasi , mari kita bersama-sama belajar dan sharing biar dapet pengalaman baru!</p>
+          <a class="text-base font-semibold text-white bg-indigo-600 py-3 px-8 rounded-full hover:shadow-lg hover:bg-indigo-800 hover:opacity-80 transition duration-300 ease-in-out" href="#">GitHub Saya!</a>
     </div>
   
     <!-- About Section -->
@@ -141,7 +141,7 @@
         <div class="flex flex-wrap">
           <div class="w-full px-4 mb-10 lg:w-1/2">
             <h4 class="mb-2 font-bold text-3xl dark:text-white">Tentang Saya</h4>
-            <p class="font-medium text-indigo-500">Hai! Saya Raditya Rizki saya merupakan orang yang baru terjun di dunia IT sebagai IT Implementor dan Web Programming, status saya sebagai Mahasiswa ULBI Prodi D4 Teknik Informatika</p>
+            <p class="font-medium text-indigo-500">Hai! Saya Raditya Rizki saya merupakan orang yang baru terjun di dunia Teknologi Informasi, status saya sebagai Mahasiswa ULBI Prodi D4 Teknik Informatika</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="font-bold text-3xl mb-2 lg:text-3xl dark:text-white">Ikuti Saya Disini!</h3>
@@ -158,7 +158,7 @@
               </a>
 
               <!-- Logo Telegram -->
-              <a href="https://t.me/dityadiscussion" target="_blank" class="w-10 h-10 mr-3 rounded-full flex justify-center items-center border border-slate-700 text-indigo-300 dark:bg-slate-700 dark:border-none"> 
+              <a href="https://t.me/versedroid" target="_blank" class="w-10 h-10 mr-3 rounded-full flex justify-center items-center border border-slate-700 text-indigo-300 dark:bg-slate-700 dark:border-none"> 
                 <svg role="img" class="dark:fill-white" width="27px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Telegram</title><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/></svg>
               </a>
             </div>
@@ -185,7 +185,7 @@
         <h3 class="font-semibold text-xl text-slate-900 dark:text-white mt-5 mb-3">
           Duck vs Obstacles Games
         </h3>
-        <p class="font-medium text-base text-indigo-500">Membuat menggunakan Bahasa pemrogamman Java dan menggunakan framework Greenfoot. Tersedia di Playstore dan <a class="text-black font-semibold" href="https://github.com/rdityaa/ducks-vs-obstacles_Greenfoot-Game" target="_blank">GitHub source code</a></span><a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://play.google.com/store/apps/details?id=com.kxland.ductjoy&pcampaignid=web_share" target="_blank">Download di Playstore!</a>
+        <p class="font-medium text-base text-indigo-500">Membuat menggunakan Bahasa pemrogamman Java dan menggunakan framework Greenfoot. Tersedia di Playstore dan <a class="text-black font-semibold" href="https://github.com/ditlabs/ducks-vs-obstacles_Greenfoot-Game" target="_blank">GitHub source code</a></span><a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://play.google.com/store/apps/details?id=com.kxland.ductjoy&pcampaignid=web_share" target="_blank">Download di Playstore!</a>
       </div>
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
@@ -203,16 +203,16 @@
         <h3 class="font-semibold text-xl text-slate-900 dark:text-white mt-5 mb-3">
           E-Commerce Website
         </h3>
-        <p class="font-medium text-base text-indigo-500">Membuat aplikasi PHP dengan Framework Laravel, AlpineJS, TailwindCSS bertema E-Commerce sederhana tentang toko komputer<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/Tugas-Besar-E-commerce-CRUD" target="_blank">Source Code</a></p>
+        <p class="font-medium text-base text-indigo-500">Membuat aplikasi PHP dengan Framework Laravel, AlpineJS, TailwindCSS bertema E-Commerce sederhana tentang toko komputer<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/ditlabs/Tugas-Besar-E-commerce-CRUD" target="_blank">Source Code</a></p>
       </div>
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
           <img src="img/image.png" alt="" class="w-full">
         </div>
-        <h3 class="font-semibold text-xl text-slate-900 dark:text-white mt-8 mb-3">
-          Profile Web Design
+        <h3 class="font-semibold text-xl text-slate-900 dark:text-white mt-6 mb-3">
+          Android Services Web-Application
         </h3>
-        <p class="font-medium text-base text-indigo-500">Membuat Website profile yang berisi tentang pribadi dengan HTML, CSS dan Framework CSS Boostrap 5<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/rditya.github.io" target="_blank">Source Code</a></p>
+        <p class="font-medium text-base text-indigo-500">Membuat Aplikasi Penyedia jasa Modding Android Berbasis Web dengan Laravel 12<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/ditlabs/new-project-1" target="_blank">Source Code</a></p>
       </div>
       </div>
      </section>
@@ -222,8 +222,8 @@
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
-            <h4 class="text-4xl font-semibold mb-2 dark:text-white">Keterampilan</h4>
-            <p class="text-indigo-600 dark:text-indigo-500">Berikut adalah Keterampilan Tools, Framework dan Bahasa Pemrogamman saya</p>
+            <h4 class="text-4xl font-semibold mb-2 dark:text-white">Tech Stack</h4>
+            <p class="text-indigo-600 dark:text-indigo-500">Tech Stack Programming saya</p>
           </div>
         </div>
         <!-- Daftar Skill -->
@@ -258,10 +258,12 @@
         <h1 class="font-medium ml-2 text-indigo-500 dark:text-white">TailwindCSS</h1>
       </div>
 
-      <!-- Bootstrap -->
+      <!-- Python -->
       <div class="h-20 w-full p-4 bg-sky-50 dark:bg-slate-900 border rounded-full shadow-sm flex items-center hover:shadow-md transition-all duration-300 transform hover:scale-[1.05] hover:bg-sky-100 dark:hover:bg-slate-700">
-        <svg role="img" width="56px" fill="#7952B3" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Bootstrap</title><path d="M11.77 11.24H9.956V8.202h2.152c1.17 0 1.834.522 1.834 1.466 0 1.008-.773 1.572-2.174 1.572zm.324 1.206H9.957v3.348h2.231c1.459 0 2.232-.585 2.232-1.685s-.795-1.663-2.326-1.663zM24 11.39v1.218c-1.128.108-1.817.944-2.226 2.268-.407 1.319-.463 2.937-.42 4.186.045 1.3-.968 2.5-2.337 2.5H4.985c-1.37 0-2.383-1.2-2.337-2.5.043-1.249-.013-2.867-.42-4.186-.41-1.324-1.1-2.16-2.228-2.268V11.39c1.128-.108 1.819-.944 2.227-2.268.408-1.319.464-2.937.42-4.186-.045-1.3.968-2.5 2.338-2.5h14.032c1.37 0 2.382 1.2 2.337 2.5-.043 1.249.013 2.867.42 4.186.409 1.324 1.098 2.16 2.226 2.268zm-7.927 2.817c0-1.354-.953-2.333-2.368-2.488v-.057c1.04-.169 1.856-1.135 1.856-2.213 0-1.537-1.213-2.538-3.062-2.538h-4.16v10.172h4.181c2.218 0 3.553-1.086 3.553-2.876z"/></svg>
-        <h1 class="font-medium ml-2 text-indigo-500 dark:text-white">Boostrap</h1>
+        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="56" height="56" viewBox="0 0 48 48">
+          <path fill="#0277BD" d="M24.047,5c-1.555,0.005-2.633,0.142-3.936,0.367c-3.848,0.67-4.549,2.077-4.549,4.67V14h9v2H15.22h-4.35c-2.636,0-4.943,1.242-5.674,4.219c-0.826,3.417-0.863,5.557,0,9.125C5.851,32.005,7.294,34,9.931,34h3.632v-5.104c0-2.966,2.686-5.896,5.764-5.896h7.236c2.523,0,5-1.862,5-4.377v-8.586c0-2.439-1.759-4.263-4.218-4.672C27.406,5.359,25.589,4.994,24.047,5z M19.063,9c0.821,0,1.5,0.677,1.5,1.502c0,0.833-0.679,1.498-1.5,1.498c-0.837,0-1.5-0.664-1.5-1.498C17.563,9.68,18.226,9,19.063,9z"></path><path fill="#FFC107" d="M23.078,43c1.555-0.005,2.633-0.142,3.936-0.367c3.848-0.67,4.549-2.077,4.549-4.67V34h-9v-2h9.343h4.35c2.636,0,4.943-1.242,5.674-4.219c0.826-3.417,0.863-5.557,0-9.125C41.274,15.995,39.831,14,37.194,14h-3.632v5.104c0,2.966-2.686,5.896-5.764,5.896h-7.236c-2.523,0-5,1.862-5,4.377v8.586c0,2.439,1.759,4.263,4.218,4.672C19.719,42.641,21.536,43.006,23.078,43z M28.063,39c-0.821,0-1.5-0.677-1.5-1.502c0-0.833,0.679-1.498,1.5-1.498c0.837,0,1.5,0.664,1.5,1.498C29.563,38.32,28.899,39,28.063,39z"></path>
+          </svg>
+        <h1 class="font-medium ml-2 text-indigo-500 dark:text-white">Python</h1>
       </div>
 
       <!-- Laravel -->
@@ -321,7 +323,7 @@
             <h3 class="font-semibold text-2xl text-slate-900 dark:text-white mt-5 mb-3">
               Join custom rom Android community here!
             </h3>
-            <p class="font-medium text-base text-indigo-500">Komunitas Modding Android, Sharing seputar Tips and Trick modding Android, Yuk langsung kepoin aja grupnya dengan gabung di link dibawah ini</span><a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://t.me/dityadiscussion" target="_blank">Join Here</a>
+            <p class="font-medium text-base text-indigo-500">Komunitas Modding Android, Sharing seputar Tips and Trick modding Android, Yuk langsung kepoin aja grupnya dengan gabung di link dibawah ini</span><a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://t.me/versedroidhq" target="_blank">Join Here</a>
           </div>
         </div>
      </section>
